[gd_scene load_steps=8 format=3 uid="uid://hpso33losfxa"]

[ext_resource type="Texture2D" uid="uid://b0wchhx7mmb68" path="res://Art/Doc/IDCard_base.png" id="1_8r6t8"]
[ext_resource type="Script" path="res://Scripts/document/id_panel.gd" id="1_q4baj"]
[ext_resource type="Texture2D" uid="uid://ctfr0d83rct5m" path="res://Art/SpeciesSymbol/SpeciesSymbol_Marquatic.png" id="3_7ra0w"]
[ext_resource type="Texture2D" uid="uid://c60l1bvcll2oj" path="res://Art/ID/Amorphus/blobby_no.png" id="3_evrb8"]
[ext_resource type="FontFile" uid="uid://c1057dmhn6pcc" path="res://fonts/TT Interphases Pro Trial Bold.ttf" id="4_gj5ls"]
[ext_resource type="Texture2D" uid="uid://ddfw4oo2jndo2" path="res://Art/StarSectorSymbol/StarSec_Triangle1.png" id="4_mybus"]
[ext_resource type="Texture2D" uid="uid://cx2jimv470lsf" path="res://Art/Stamp/StampOfficial_2.png" id="5_thtb4"]

[node name="id_panel" type="Control"]
z_index = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_top = -1.0
offset_right = -3.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q4baj")

[node name="id_panel" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5215
anchor_top = 0.5
anchor_right = 0.5215
anchor_bottom = 0.5
offset_left = -576.28
offset_top = -394.0
offset_right = 575.72
offset_bottom = 369.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_8r6t8")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="pic" type="TextureRect" parent="id_panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0789931
anchor_top = 0.315858
anchor_right = 0.357
anchor_bottom = 0.795727
offset_right = -0.264038
offset_bottom = -0.140015
texture = ExtResource("3_evrb8")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="name" type="Label" parent="id_panel"]
z_index = 10
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0217014
anchor_top = 0.0602883
anchor_right = 0.931
anchor_bottom = 0.215
offset_right = 0.487915
offset_bottom = -0.0449982
theme_override_fonts/font = ExtResource("4_gj5ls")
theme_override_font_sizes/font_size = 56
text = "TRADGEDEIGH
"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="spe" type="MarginContainer" parent="id_panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.49566
anchor_top = 0.322412
anchor_right = 0.952
anchor_bottom = 0.412
offset_right = 0.296021
offset_bottom = -0.356018
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20
metadata/_edit_use_anchors_ = true

[node name="species" type="Label" parent="id_panel/spe"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_gj5ls")
theme_override_font_sizes/font_size = 40
text = "MARQUATIC"
vertical_alignment = 1

[node name="exp" type="MarginContainer" parent="id_panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.49566
anchor_top = 0.519004
anchor_right = 0.952
anchor_bottom = 0.608593
offset_right = 0.296021
offset_bottom = -0.356018
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20
metadata/_edit_use_anchors_ = true

[node name="expiry" type="Label" parent="id_panel/exp"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_gj5ls")
theme_override_font_sizes/font_size = 40
text = "JUNE. 10. 8013"
vertical_alignment = 1

[node name="spe_symbol" type="TextureRect" parent="id_panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.77691
anchor_top = 0.290957
anchor_right = 0.77691
anchor_bottom = 0.290957
offset_right = 200.0
offset_bottom = 200.0
texture = ExtResource("3_7ra0w")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="star_sec" type="MarginContainer" parent="id_panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0442708
anchor_top = 0.778689
anchor_right = 0.406
anchor_bottom = 0.894
offset_top = -0.140015
offset_right = 0.287964
offset_bottom = -0.12207
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10

[node name="sec" type="Label" parent="id_panel/star_sec"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_gj5ls")
theme_override_font_sizes/font_size = 48
text = "CALDORIA PRIME"
horizontal_alignment = 1

[node name="sec_symbol" type="TextureRect" parent="id_panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0520833
anchor_top = 0.682831
anchor_right = 0.139354
anchor_bottom = 0.813439
offset_top = -11.0
offset_right = -0.536011
offset_bottom = -10.6541
texture = ExtResource("4_mybus")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="pattern" type="Label" parent="id_panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.558882
anchor_top = 0.827433
anchor_right = 0.558882
anchor_bottom = 0.845782
offset_left = -133.832
offset_top = -28.3311
offset_right = 233.168
offset_bottom = 28.6689
theme_override_fonts/font = ExtResource("4_gj5ls")
theme_override_font_sizes/font_size = 48
text = "PATTERNCODE
"
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="stamp" type="TextureRect" parent="id_panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.888028
anchor_top = 0.796371
anchor_right = 0.888028
anchor_bottom = 0.796371
offset_left = -100.008
offset_top = -99.631
offset_right = 99.9919
offset_bottom = 100.369
texture = ExtResource("5_thtb4")
expand_mode = 1
metadata/_edit_use_anchors_ = true
